# pyfoxhole

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  update-requirements.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pre-commit.yml
src/pyfoxhole/: __init__.py  __main__.py  api.py  models.py
tests/: conftest.py  worldconquest_test.py
